August_30/August_30/src/objects/Financials__c.object
<CustomObject>
    <fields>
        <fullName>As_of_date__c</fullName>
        <label>As of date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial</relationshipLabel>
        <relationshipName>Financial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered_Revenue__c</fullName>
        <label>Delivered Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Actual__c</fullName>
        <description>This is for Project (record type)</description>
        <formula>( Total_Revenue__c -  Total_Cost__c ) /  Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Actual %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GP_Percent__c</fullName>
        <description>This is for Practice (record type)</description>
        <label>GP Percent</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Profit_Percentage__c</fullName>
        <label>Net Profit(%)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Profit__c</fullName>
        <label>Net Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overhead_Cost__c</fullName>
        <label>Overhead Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <label>Pipeline</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priced_GP__c</fullName>
        <label>Priced GP</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Financial</relationshipLabel>
        <relationshipName>Financial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SG_A__c</fullName>
        <label>SG&amp;A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GP__c</fullName>
        <label>GP $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Financials ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>As_of_date__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Total_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Practice_Finance</fullName>
        <columns>NAME</columns>
        <columns>As_of_date__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Total_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Financials__c.By_Practice</value>
        </filters>
        <label>Practice Finance</label>
    </listViews>
    <listViews>
        <fullName>Project_Finance</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>As_of_date__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Total_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Financials__c.By_Project</value>
        </filters>
        <label>Project Finance</label>
    </listViews>
    <listViews>
        <fullName>X2018_Financials</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>As_of_date__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Total_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>2018 Financials</label>
    </listViews>
    <recordTypes>
        <fullName>By_Practice</fullName>
        <active>true</active>
        <label>By Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>By_Project</fullName>
        <active>true</active>
        <label>By Project</label>
    </recordTypes>
</CustomObject>